clang/test/BSC/Negative/Ownership/Owned/owned_global_err/owned_global_err.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

owned int a = 10; //expected-error {{type of global variable cannot qualified by 'owned'}}

typedef struct A {
    owned int num;
}SA;

SA sa1 = {.num = 10};   //expected-error {{type of global variable cannot qualified by 'owned'(even indirectly), 'SA' (aka 'struct A') contains 'owned' type}}

struct A sa2 = {.num = 20};   //expected-error {{type of global variable cannot qualified by 'owned'(even indirectly), 'struct A' contains 'owned' type}}

typedef struct B {
    SA* sa;
}SB;

SB* sb1;


